# second-brain

./: .gitignore  AGENTS.md  DOCS_UPDATED.md  README.md  pyproject.toml
.beads/: issues.jsonl
.serena/: project.yml
docs/: RELEASE_PROCESS.md  architecture.md  cli-reference.md  encryption.md  epics-and-dependencies.md  index.md  installation.md  mcp-server.md  notes.md  quickstart.md  slash-commands.md  sync_local_sb_with_cloud.md  task-issue-integration.md  workflows.md
docs/architecture/: beads-architecture.md  centralized-data-architecture.md
docs/development/: SB-7-precommit-hook-spec.md  implementation-plan.md  install-hooks-spec.md
docs/encryption/: README.md  best-practices.md  cli-reference.md  installation.md  precommit-hook.md  troubleshooting.md
docs/testing/: precommit-hook-test-results.md
examples/: README.md
examples/commands/: sb-bug-investigation.md  sb-context-management.md  sb-current-work.md  sb-daily-dev-workflow.md  sb-daily-summary.md  sb-epic-project-create.md  sb-explore-tags.md  sb-feature-development.md  sb-find-task.md  sb-issue-view.md  sb-log.md  sb-ml-research-workflow.md  sb-note-search.md  sb-project-create.md  sb-project-status.md  sb-project-view.md  sb-projects-overview.md  sb-quick-mode.md  sb-quick-tasks.md  sb-report.md  sb-search-all.md  sb-task-create.md  sb-task-update.md  sb-task-view.md  sb-transcript-view.md  sb-weekly-review.md  sb-weekly-summary.md
examples/skills/second-brain/: README.md  SKILL.md
src/second_brain/: __init__.py  cli.py  config.py  mcp_server.py
src/second_brain/crypto/: __init__.py  encryption.py  hooks.py  key_manager.py  validators.py
src/second_brain/db/: __init__.py  models.py  operations.py
src/second_brain/hooks/: __init__.py  (+1 more)
tests/: __init__.py  test_basic.py  test_crypto.py
(+23 files in other folders)
