[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "second-brain"
version = "0.1.0"
description = "Work tracking CLI and MCP server for personal knowledge management"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Sean M" }
]
keywords = ["productivity", "work-tracking", "mcp", "ai-agents", "knowledge-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=0.2.0",
    "click>=8.1.0",
    "sqlalchemy>=2.0.0",
    "jira>=3.5.0",
    "pydantic>=2.0.0",
    "python-frontmatter>=1.0.0",
    "python-dateutil>=2.8.0",
    "rich>=13.0.0",
    "beads-mcp>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/seanm/second-brain"
Repository = "https://github.com/seanm/second-brain"
Documentation = "https://github.com/seanm/second-brain#readme"
Issues = "https://github.com/seanm/second-brain/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
sb = "second_brain.cli:main"
second-brain-mcp = "second_brain.mcp_server:main"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
